# PyMNE-Studio2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
quicklab/: __init__.py  cli.py  main.py
quicklab/core/: __init__.py  data_manager.py  event_system.py  pipeline_manager.py  session_manager.py
quicklab/ui/: __init__.py  main_window.py
quicklab/ui/widgets/: __init__.py  data_browser.py  dock_manager.py  status_widget.py
quicklab/utils/: __init__.py  error_handler.py  logger.py
quicklab/visualization/: __init__.py
quicklab/visualization/common/: __init__.py  colormaps.py  plot_utils.py
quicklab/visualization/raw_viewer/: __init__.py  eegplot_adv.py  interactive_canvas.py
tests/: __init__.py  conftest.py  test_core.py
