[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "quicklab"
description = "An advanced EEG/MEG analysis IDE for MNE-Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "QuickLab Development Team", email = "dev@quicklab.org"}
]
maintainers = [
    {name = "QuickLab Development Team", email = "dev@quicklab.org"}
]
keywords = [
    "neuroscience",
    "EEG",
    "MEG",
    "electrophysiology",
    "brain",
    "signal-processing",
    "MNE",
    "analysis",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

dependencies = [
    "mne>=1.4.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "PyQt6>=6.2.0",
    "qtpy>=2.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "h5py>=3.0.0",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "numba>=0.55.0",
    "psutil>=5.8.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-gallery>=0.10.0",
    "numpydoc>=1.4.0",
]
advanced = [
    "autoreject>=0.3.0",
    "mne-icalabel>=0.4.0",
    "fooof>=1.0.0",
    "pyriemann>=0.3.0",
    "mne-connectivity>=0.3.0",
    "mne-bids>=0.12.0",
    "mayavi>=4.7.0",
    "pyvista>=0.35.0",
    "pyvistaqt>=0.9.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-gallery>=0.10.0",
    "numpydoc>=1.4.0",
    "pillow>=8.0.0",
    "memory-profiler>=0.60.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "pytest-qt>=4.0.0",
    "pytest-xvfb>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/quicklab"
Documentation = "https://quicklab.readthedocs.io"
Repository = "https://github.com/yourusername/quicklab"
"Bug Tracker" = "https://github.com/yourusername/quicklab/issues"
Discussions = "https://github.com/yourusername/quicklab/discussions"

[project.scripts]
quicklab = "quicklab.cli:main"

[project.gui-scripts]
quicklab-gui = "quicklab.main:main"

[tool.setuptools]
packages = ["quicklab"]
include-package-data = true

[tool.setuptools.package-data]
quicklab = [
    "resources/*",
    "resources/icons/*",
    "resources/themes/*",
    "examples/*",
    "examples/data/*",
]

[tool.setuptools_scm]
write_to = "quicklab/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["quicklab"]
known_third_party = [
    "mne",
    "numpy",
    "scipy",
    "matplotlib",
    "sklearn",
    "pandas",
    "PyQt6",
    "qtpy",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mne.*",
    "matplotlib.*",
    "scipy.*",
    "sklearn.*",
    "pandas.*",
    "seaborn.*",
    "plotly.*",
    "numba.*",
    "autoreject.*",
    "fooof.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=quicklab --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["quicklab"]
omit = [
    "quicklab/_version.py",
    "quicklab/tests/*",
    "quicklab/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@abstract",
]